# CodeDB

./: Cargo.toml  DESIGN.md  LICENSE  README.md  demo.sh  improvements.md
.claude/: settings.local.json
codedb-cli/: Cargo.toml
codedb-cli/src/: main.rs
codedb-core/: Cargo.toml
codedb-core/src/: codedb.rs  git_ops.rs  indexer.rs  language.rs  lib.rs  query.rs  schema.rs  symbols.rs
codedb-core/tests/: integration.rs
docs/plans/: 2026-03-05-git-ingestion-design.md  2026-03-05-git-ingestion-impl-plan.md  2026-03-05-sourcegraph-query-design.md  2026-03-05-sourcegraph-query-impl-plan.md  2026-03-05-tantivy-sqlite-impl-plan.md  2026-03-05-tantivy-sqlite-vtab-design.md  2026-03-05-tree-sitter-design.md  2026-03-05-tree-sitter-impl-plan.md
tantivy-sqlite/: Cargo.toml
tantivy-sqlite/src/: builder.rs  lib.rs  query_builder.rs  types.rs  vtab.rs  vtab_helpers.rs
tantivy-sqlite/tests/: integration.rs
