[package]
name = "codedb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
tantivy-sqlite = { path = "../tantivy-sqlite" }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
gix = { version = "0.70", features = ["blocking-network-client", "blocking-http-transport-curl"] }
anyhow = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3"
